Fix horizontal scroll problem2

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 98vw;
     right: 0px;
     overflow-x: hidden;
     background: rgb(58,137,138);
